Fixes to queue methods

--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
 	"project": "nhs-ssb-proxy",
 	"name": "nhs-ssb-proxy-service",
-	"description": "",
+	"description": "Proxy Service for Auth SAML",
 	"author": "DWP/HSCIC",
 	"debugLevel": "debug",
 	"port": 9001
